--- a/config/i3/config
+++ b/config/i3/config
@@ -11,7 +11,7 @@ exec --no-startup-id setxkbmap -layout us,ua,ru -variant ,,winkeys -option grp:a
 exec --no-startup-id picom --config ~/.config/picom/picom.conf
 exec --no-startup-id  /home/domino/scripts/autostart.sh
 exec --no-startup-id blueman-applet &
-exec_always --no-startup-id feh --bg-fill /home/domino/Picture/wall.jpg
+exec_always --no-startup-id feh --bg-fill /home/domino/Pictures/wall.jpg
 
 
 # Autostart stop
@@ -47,13 +47,10 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Windows color management
-colors {
-    #                      border      background  text        indicator   child_border
-    client.focused          #1E90FF     #1E90FF     #ffffff     #1E90FF     #1E90FF
-    client.unfocused        #2e3440     #2e3440     #888888     #2e3440     #2e3440
-    client.focused_inactive #3b4252     #3b4252     #aaaaaa     #3b4252     #3b4252
-    client.urgent           #64bf61ff   #64bf61ff   #ffffff     #64bf61ff   #64bf61ff
-}
+client.focused          #1E90FF #1E90FF #ffffff #1E90FF #1E90FF
+client.unfocused        #2e3440 #2e3440 #888888 #2e3440 #2e3440
+client.focused_inactive #3b4252 #3b4252 #aaaaaa #3b4252 #3b4252
+client.urgent           #64bf61 #64bf61 #ffffff #64bf61 #64bf61
 
 # Window management
 floating_modifier $mod
